plugins {
	id 'org.springframework.boot' version '2.5.6'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
	id 'war'
}

group = 'remora'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.jcodec:jcodec:0.2.5'
	implementation 'org.jcodec:jcodec-javase:0.2.5'
	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
	implementation 'me.paulschwarz:spring-dotenv:2.4.1'
	implementation 'io.springfox:springfox-boot-starter:3.0.0'
}

test {
	useJUnitPlatform()
}

javadoc {
	source = sourceSets.main.java.srcDirs
	options.encoding = 'UTF-8'
}